# deckard

./: README.md  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
deckard/: extractor.py  pl.py
deckard/patterns/: pl.py
tests/: test_extractor.py  test_search_with_multiple_patterns.py  test_standard_patterns.py
tests/pl/: test_search_address_pl.py  test_search_mobile_phone_pl.py
