[tool.poetry]
name = "deckard"
version = "0.1.0"
description = ""
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
regex = "^2025.7.34"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
debugpy = "^1.8.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
