[tool.poetry]
name = "deckard"
version = "0.0.1"
description = "Extract structured data from unstructured text — no AI, just regular expressions. 🔍"
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/deckard"
repository = "https://github.com/SpaceShaman/deckard"
documentation = "https://github.com/SpaceShaman/deckard"
keywords = ["regex", "data-extraction", "regular-expression"]

[tool.poetry.dependencies]
python = "^3.9"
regex = "^2025.7.34"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
debugpy = "^1.8.16"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
